Fixed jumping links on hover

--- a/src/stylesheets/whereToPage.scss
+++ b/src/stylesheets/whereToPage.scss
@@ -1,6 +1,7 @@
 .whereToPage {
   ul {
     list-style-type: none;
+    line-height: 1.4em;
   }
   li:before {
     font-family: 'FontAwesome';
